--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://janinduchanuka.github.io",
+  "homepage": "https://janinduchanuka.github.io/React-App-Practice",
   "name": "react-website",
   "version": "0.1.0",
   "private": true,
